// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swot Category unit tests Rendering component with props for category and note. 1`] = `
<Item
  draggable={true}
  onDragStart={[Function]}
>
  <ItemContent>
    <ItemHeader>
      TEST VALUE
    </ItemHeader>
    <ItemDescription>
      <p>
        Test note for testing
      </p>
      <br />
    </ItemDescription>
  </ItemContent>
</Item>
`;

exports[`Swot Category unit tests Rendering component without props. 1`] = `
<Item
  draggable={true}
  onDragStart={[Function]}
>
  <ItemContent>
    <ItemHeader />
    <ItemDescription>
      <p />
      <br />
    </ItemDescription>
  </ItemContent>
</Item>
`;
